<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaxiShare</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_taxisharer">Hello TaxiSharer!</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="rememberme">Remember Me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="offertaxi">Offer TaxiShare</string>
    <string name="requesttaxi">Request TaxiShare</string>
    <string name="viewprofile">View Profile</string>
    <string name="viewrides">View Rides</string>
    <string name="logout">Log Out</string>
    <string name="checkin">Check In</string>
    <string name="title_activity_register_screen">Registration</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_book_ride">BookRide</string>
    <string name="title_activity_offer_taxi">OfferTaxi</string>
    <string name="title_activity_checkin_screen">CheckinScreen</string>
    <string name="scanQRCode">Scan</string>
    <string name="title_activity_rating_form">RatingForm</string>
    <string name="title_activity_end_of_ride_screen">EndOfRideScreen</string>
    <string name="scan_instruction_text_view">Please press scan and scan the Taxi QRcode in order to checkin to your ride.</string>
    <string name="reset_password_instruction_text_view">To reset your password, enter your email address and a temporary password will be sent to you.</string>
    <string name="submit">Submit</string>
    <string name="title_activity_reset_password_screen">ResetPassword</string>
    <string name="email_sent_notification_success">An email has been sent!</string>
    <string name="done">Done</string>
    <string name="title_activity_email_sent_notification_screen">EmailSent</string>
    <string name="input_request_taxiride_date">Date mm/dd/yyyy</string>
    <string name="input_request_taxiride_time">Time 24hrs hh/mm</string>
    <string name="number_of_riders"># of riders</string>
    <string name="bookRide">Book Future Ride</string>
    <string name="offerTaxi">Offer Current Taxi</string>
    <string name="title_activity_ride_in_progress_screen">RideInProgressScreen</string>
    <string name="title_activity_calendar_screen">CalendarScreen</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="backtologinbutton">Login</string>
    <string name="resigtrationsuccmsg">Registration Success</string>
    <string name="congratulations">Congratulations!</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="taxiID">Taxi ID</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="seatsAvailable">Seats Available</string>
    <string name="title_activity_offer_forms">Offer Form</string>
    <string name="title_activity_request_ride">RequestTaxi</string>
    <string name="addevent">Add Event</string>
    <string name="eventbutton">Book Taxi</string>
    <string name="title_activity_registration_error_screen">RegistrationErrorScreen</string>
    <string name="registrationError">Registration Error!</string>
    <string name="tryagain">Try Again</string>
    <string name="title_activity_registration_success">MainActivity</string>
    <string name="book">Book</string>
    <string name="radingQ1">Would you ride with this TaxiSharer again?</string>
    <string name="radingQ2">Would you recommend this TaxiSharer to a friend to share a taxi with?</string>
    

    <string name="facebook_app_id">778051908932714</string>
    <string name="title_facebook_login">Facebook login</string>

    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="gender">Gender</string>
    <string name="modifyprofile">Modify Profile</string>
    <string name="removeprofile">Remove Profile</string>

</resources>
