<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:clickable="true"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/username"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <CheckBox
        android:id="@+id/saveCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:text="@string/rememberme" />

    <TextView
        android:id="@+id/testTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/hello_taxisharer" />

    <Button
        android:id="@+id/submitButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="RideInProgressScreen Test"
        android:onClick="goToRideInProgressScreen" />

    <TextView
        android:id="@+id/loginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Login Status" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:onClick="pressRegister"
        android:text="@string/register" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
        android:layout_below="@+id/saveCredentials"
        android:onClick="listenToLogin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="listenToForgotPassword"
        android:text="@string/forgotpassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/forgotpassword"
        android:layout_centerHorizontal="true"
        android:onClick="facebookLogin" />

</RelativeLayout>