<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
   >
  
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    >
    
    <TextView
        android:id="@+id/datebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="37dp"
        android:clickable="true"
        android:onClick="dateOnClick"
        android:hint="@string/input_request_taxiride_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
       	/>
    
    <EditText
        android:id="@+id/frombook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/datebook"
        android:hint="@string/from"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/tobook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/frombook"
        android:ems="10"
        android:hint="@string/to"
        android:layout_marginTop="30dp"
        android:singleLine="true" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tobook"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/numberbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timePicker"
        android:layout_alignLeft="@+id/frombook"
        android:ems="5"
        android:hint="@string/number_of_riders"
        android:layout_marginTop="30dp"
        android:inputType="number" />
    

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/numberbook"
        android:layout_marginTop="30dp"
        android:text="@string/book" />



</RelativeLayout>
</ScrollView>

