<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seatsAvailableEditText"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/maleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male" />

        <RadioButton
            android:id="@+id/femaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female" />
    </RadioGroup>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:onClick="listenToSubmit"
        android:text="@string/submit" />

<!--     <TextView -->
<!--         android:id="@+id/taxiIDTextView" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_alignParentTop="true" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:layout_marginTop="37dp" -->
<!--         android:text="Taxi ID" -->
<!--         android:textAppearance="?android:attr/textAppearanceLarge" /> -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Scan Successful"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/originEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/origin" />

    <EditText
        android:id="@+id/seatsAvailableEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/destinationEditText"
        android:layout_below="@+id/destinationEditText"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/seatsAvailable" />

    <EditText
        android:id="@+id/destinationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/originEditText"
        android:layout_below="@+id/originEditText"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/destination" />

</RelativeLayout>
