<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.taxiapp.taxiappt02_01.RatingForm" >

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/radingQ1" 
        android1:layout_marginTop="30dp"/>
    
     <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/question1"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="20dp" >

        <RadioButton
            android1:id="@+id/radio0"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="Yes" />

        <RadioButton
            android1:id="@+id/radio1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="No" />


    </RadioGroup>

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/radingQ2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />


    <RadioGroup
        android1:id="@+id/radioGroup2"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/question2"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="20dp" >

        <RadioButton
            android1:id="@+id/radio3"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="Yes" />

        <RadioButton
            android1:id="@+id/radio4"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="No" />

    </RadioGroup>

    <Button
        android:id="@+id/submitrading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/submit" 
        android:onClick="submitOnClick"/>

</RelativeLayout>